--- a/pages/giving.html
+++ b/pages/giving.html
@@ -51,84 +51,58 @@
                 </section>
                 <table>
                 <tr>
-                    <td rowspan="3"><div id="Charitable">
+                    <td><div id="Charitable">
                             <div class="part">
                                 <h2>Charitable Giving</h2>
-                                <h3>Together, we can make a difference</h3>
-                                <p> At Wells Fargo, we&rsquo;re
-                                    committed to providing community solutions – local
-                                    responses to local needs. We promote economic
-                                    development and self-sufficiency through community
-                                    development, financial education, cash contributions,
-                                    affordable housing, environmental stewardship, and
-                                    through the efforts of our enthusiastic team member
-                                    volunteers. </p>
-                                <p>For philanthropic activities and investments last year,
-                                    Wells Fargo reached important milestones:</p>
-                                <ul>
-                                    <li><em>The Chronicle of Philanthropy</em> recognized Wells Fargo
-                                        as the Most Generous Cash Donor in the U.S. for investing $315.8
-                                        million in 19,500 nonprofits.</li>
-                                    <li>The United Way Worldwide, for the fourth year in a row, named
-                                        Wells Fargo&rsquo;s annual Community Support and United Way
-                                        Campaign as the No. 1 Giving Campaign. </li>
-                                    <li>Wells Fargo team members volunteered 1.5 million hours and
-                                        donated $70 million to nonprofits. </li>
-                                </ul>
-                                <p>And now, by working together with you, we can make a difference in our international communities.
-                                    You are invited, for the third year in a row, to cast a vote for one of four nonprofits (noted below)
-                                    that make a difference around the world. Based on this poll held at our Wells Fargo Sibos reception,
-                                    Wells Fargo will donate a total of USD$10,000 to these four charities.</p>
-                                <h3>Click on each nonprofit to learn more:</h3>
-                                <ul>
-                                    <li><a href="http://thebreadtin.org">The BreadTin</a> is
-                                        a new giving club that teaches young professionals about philanthropy in London </li>
-                                    <li><a href="http://www.arcrelief.org/">American Refugee Committee</a> helps
-                                        victims of war and civil conflict rebuild their lives in seven countries around the world </li>
-                                    <li><a href="http://www.dcsneeds.ae/">Dubai Center for Special Needs</a> provides
-                                        specialized education and therapy for children with various disabilities </li>
-                                    <li><a href="http://www.projectvietnam.org">Project Vietnam Foundation</a> works
-                                        on creating sustainable pediatric healthcare in Vietnam, while providing free
-                                        healthcare and aid to impoverished rural areas across the country </li>
-                                </ul>
-                            </div>
-                            <div id="cemina" class="part" style="display: none;">
-                                <p class="shrink" style="float: right;">&lt; <a href="giving.html">Charitable giving</a></p>
-                                <h2>CEMINA</h2>
-                                <p>CEMINA was founded by a group of women activists in Brazil who struggled to find a way to
-                                    communicate with the public about aspirations, wishes, rights, and changes that women seek
-                                    for themselves and for society as a whole. Through broadcast radio, CEMINA works to provide a
-                                    platform for women to have a voice, air their opinions, and speak candidly about issues
-                                    related to gender and human rights. Over the last decade, CEMINA has expanded to educate
-                                    underserved communities of Brazil, providing access to a range of information and
-                                    communication channels at low-to-no cost. </p>
-                                <h4>Climate change has no boundaries: Help rural Brazil</h4>
-                                <p>Bahia is the fourth most populated state in Brazil and one of the poorest regions.
-                                    Semi-arid, climate conditions prove challenging for nearly two million households that face
-                                    periods of drought. In partnership with CEMINA, Adapta Sertão is giving young farmers in the
-                                    region access to water, efficient irrigation, and innovative technologies. Such a hand up
-                                    will: <a class="givingLogo" href="http://www.cemina.org.br/english/" target="_blank">
-                                        <img
-                                                src="../images/logos/cemina.png" alt="jen" width="222" height="131" align="right">
-                                    </a></p>
-                                <ul>
-                                    <li>Enhance their ability to adapt to climate change conditions. </li>
-                                    <li>Ensure food security and the ability to market their produce. </li>
-                                    <li>Decrease deforestation rates caused by pasture.</li>
-                                    <li>Reduce poverty and educate small farmers and communities about climate change. </li>
-                                </ul>
-                                <p><em>To learn more, visit <a href="http://www.cemina.org.br/english/"
-                                                                   target="_blank">cemina.org</a>.</em></p>
-                            </div>
+</div>
                         </div></td>
-                    <td rowspan="4">&nbsp;</td>
-                    <td class="blocks ribron">&nbsp;</td>
+                    <td rowspan="5">&nbsp;</td>
+                    <td>&nbsp;</td>
                 </tr>
                 <tr>
-                    <td class="blocks">&nbsp;</td>
+                    <td><h3>Together, we can make a difference</h3></td>
+                    <td>&nbsp;</td>
                 </tr>
                 <tr>
-                    <td rowspan="2">&nbsp;</td>
+                    <td rowspan="2"><p> At Wells Fargo, we&rsquo;re
+                        committed to providing community solutions – local
+                        responses to local needs. We promote economic
+                        development and self-sufficiency through community
+                        development, financial education, cash contributions,
+                        affordable housing, environmental stewardship, and
+                        through the efforts of our enthusiastic team member
+                        volunteers. </p>
+                        <p>For philanthropic activities and investments last year,
+                            Wells Fargo reached important milestones:</p>
+                        <ul>
+                            <li><em>The Chronicle of Philanthropy</em> recognized Wells Fargo
+                                as the Most Generous Cash Donor in the U.S. for investing $315.8
+                                million in 19,500 nonprofits.</li>
+                            <li>The United Way Worldwide, for the fourth year in a row, named
+                                Wells Fargo&rsquo;s annual Community Support and United Way
+                                Campaign as the No. 1 Giving Campaign. </li>
+                            <li>Wells Fargo team members volunteered 1.5 million hours and
+                                donated $70 million to nonprofits. </li>
+                        </ul>
+                        <p>And now, by working together with you, we can make a difference in our international communities.
+                            You are invited, for the third year in a row, to cast a vote for one of four nonprofits (noted below)
+                            that make a difference around the world. Based on this poll held at our Wells Fargo Sibos reception,
+                    Wells Fargo will donate a total of USD$10,000 to these four charities.</p></td>
+                    <td class="blocks ribron"><h3>learn more</h3></td>
+                </tr>
+                <tr>
+                    <td class="blocks"><p><strong>Click on each nonprofit to learn more:</strong></p>
+                        <ul>
+                            <li><a href="http://thebreadtin.org">The BreadTin</a> is
+                                a new giving club that teaches young professionals about philanthropy in London </li>
+                            <li><a href="http://www.arcrelief.org/">American Refugee Committee</a> helps
+                                victims of war and civil conflict rebuild their lives in seven countries around the world </li>
+                            <li><a href="http://www.dcsneeds.ae/">Dubai Center for Special Needs</a> provides
+                                specialized education and therapy for children with various disabilities </li>
+                            <li><a href="http://www.projectvietnam.org">Project Vietnam Foundation</a> works
+                                on creating sustainable pediatric healthcare in Vietnam, while providing free
+                                healthcare and aid to impoverished rural areas across the country </li>
+                    </ul></td>
                 </tr>
                 <tr>
                     <td><hr>
@@ -195,12 +169,13 @@
                             at 14 training centers across the country. A simple set of devices and a trained health worker
                             can save a baby at birth.&rdquo;</em></p>
                         <p><strong>— Linh
-                            Trinh</strong>, GFI Vietnam office</p></td>
+                    Trinh</strong>, GFI Vietnam office</p></td>
+                    <td>&nbsp;</td>
                 </tr>
                 <tr>
                     <td width="66%">&nbsp;</td>
-                    <td>&nbsp;</td>
-                    <td width="33%">&nbsp;</td>
+                    <td width="3%">&nbsp;</td>
+                    <td width="26%">&nbsp;</td>
                 </tr>
                 </table>
             </div>
