--- a/pages/home.html
+++ b/pages/home.html
@@ -56,6 +56,7 @@
                                 and we look forward to seeing you in Dubai.</p>
                             <p>For more information about Sibos 2013, please visit the official Sibos website at <a
                                     href="http://www.sibos.com">sibos.com</a>. </p></td>
+                        <td>&nbsp;</td>
                     </tr>
                     <tr>
                         <td class="blocks ribron"><a class="learn" href="events.html">learn more</a>
@@ -64,12 +65,14 @@
                         <td class="blocks ribron"><a class="learn" href="giving.html">learn more</a>
                             <h3>Get involved</h3></td>
                         <td>&nbsp;</td>
-                        <td rowspan="2" class="blocks" style="position: relative;"><p><a title="booth_map" class="popup pic" href="../images/misc/booth_map.gif">
+                        <td colspan="2" rowspan="2" style="position: relative;">
+                            <p><a title="booth_map" class="popup pic" href="../images/misc/booth_map.gif">
                                     <img src="../images/booth_F87.png" width="320" height="128" alt="Booth F87">
                                 </a></p>
                             <p><a title="booth_map" class="popup pic" href="../images/misc/booth_map.gif">
                                     <img src="../images/banners/momentum.png" width="320" height="164" alt="Magazine">
-                                </a></p></td>
+                                </a></p>
+                        </td>
                     </tr>
                     <tr>
                         <td class="blocks"><p>
@@ -87,8 +90,8 @@
                         <td class="blocks"><p>
                                 <img src="../images/tile_home_getInvolved.png" width="225" height="121">
                             </p>
-                            <p><strong>By working together, we can make a
-                                    difference in our international communities. </strong></p>
+                            <p><strong>By working together</strong>, we can make a
+                                    difference in our international communities. </p>
                             <p>You are invited, for the third year in a row,
                                 to cast a vote for one of four nonprofits that
                                 make a difference around the world. </p></td>
@@ -96,10 +99,11 @@
                     </tr>
                     <tr>
                         <td width="33%">&nbsp;</td>
-                        <td width="1%">&nbsp;</td>
+                        <td width="3%">&nbsp;</td>
                         <td width="33%">&nbsp;</td>
-                        <td width="1%">&nbsp;</td>
-                        <td width="33%" style="position: relative;">&nbsp;</td>
+                        <td width="3%">&nbsp;</td>
+                        <td width="22%">&nbsp;</td>
+                        <td width="11%">&nbsp;</td>
                     </tr>
                 </table>
                 <div class="popup">
