--- a/pages/speakers.html
+++ b/pages/speakers.html
@@ -63,14 +63,17 @@
                         <td class="blocks ribron"><h3>Risk management</h3></td>
                     </tr>
                     <tr>
-                        <td class="blocks"><p><strong> New technologies that improve the customer experience</strong><br>
-                                <strong>Tuesday, September 17</strong><br>
-                                <strong>4:00 pm to 5:00 pm</strong><br>
-                                <strong>Conference room 3 - CR3</strong><br>
-                                Featuring: Mike Kennedy, head of Innovation and
-                                Payments Strategy (insert picture of Mike and <a
-                                    href="http://collaboration-iceo.wellsfargo.com/sites/MSC/wbr/PDFBioFinals/KennedyMichaelBio.pdf">link
-                                    to Mike&rsquo;s bio</a>)</p>
+                        <td class="blocks"><p> <strong>New technologies that improve the customer experience</strong><br>
+                                Tuesday, September 17<br>
+                                4:00 pm to 5:00 pm<br>
+                                Conference room 3 - CR3</p>
+                            <p>
+                                <img src="../images/speakers_kennedy.png" alt="" width="119" height="156" align="right">
+                                Featuring: <br>
+                                Mike Kennedy, head of Innovation and
+                                Payments Strategy</p>
+                            <p>&nbsp;</p>
+                            <p><a href="http://collaboration-iceo.wellsfargo.com/sites/MSC/wbr/PDFBioFinals/KennedyMichaelBio.pdf">bio</a></p>
                             <p> How to generate value and develop an
                                 infrastructure that supports the strategic use of
                                 gamification and social media to improve the customer
@@ -79,23 +82,23 @@
                         <td class="blocks"><p><strong>&lt;placeholder for tile ad&gt;</strong><br>
                                  Share your pony story with us <br>
                                 #WFpony</p>
-                            <p class="hide">How is the role of an IT leader
-                                changing to meet the challenges of delivering
-                                operational excellence in a world of ever-growing
-                                demands and relentless volatility? What is the
-                                impact of cultural, technology, and generation
-                                shifts? What skills and leadership styles do brave
-                                new leaders need to embrace and how is that
-                                different from the past?</p></td>
+                            <p>
+                                <img src="../images/banners/pony.png" width="230" height="61" alt="pony">
+                                <img src="../images/speakers_videoThumbnail.png" alt="" width="98" height="58">
+                            </p>
+                        </td>
                         <td>&nbsp;</td>
-                        <td class="blocks"><p><strong> From grapple to grip</strong><br>
-                                <strong>Wednesday, September 18</strong><br>
-                                <strong>2:00 pm to 3:00 pm</strong><br>
-                                <strong>Conference room 1 - CR1 </strong><br>
-                                Featuring: Tom Lickiss, head of Business Risk for
-                                GFI (insert picture of Tom and link to <a
-                                    href="http://collaboration-iceo.wellsfargo.com/sites/MSC/wbr/PDFBioFinals/lickissthomasbio.pdf">Tom&rsquo;s
-                                    bio</a>)<br>
+                        <td class="blocks"><p> <strong>From grapple to grip</strong><br>
+                                Wednesday, September 18<br>
+                                2:00 pm to 3:00 pm<br>
+                                Conference room 1 - CR1 </p>
+                            <p>
+                                <img src="../images/speakers_lickiss.png" alt="" width="119" height="156" align="right">
+                                Featuring: <br>
+                                Tom Lickiss, head of Business Risk for
+                                GFI </p>
+                            <p>&nbsp;</p>
+                            <p><a href="http://collaboration-iceo.wellsfargo.com/sites/MSC/wbr/PDFBioFinals/lickissthomasbio.pdf">bio</a><br>
                                 Banks are exposed to a wide and
                                 increasing range of risks that can have an impact
                                 on their reputation. The panel will discuss how
@@ -104,19 +107,12 @@
                                 understanding risk to applying controls in line
                                 with their risk appetite? How can they benchmark
                                 their policies and procedures with global best
-                                practices?</p>
-                            <p>You&rsquo;ll find more information about these
-                                sessions – including the full Sibos conference program
-                                – at sibos.com. <a
-                                    href="http://www.sibos.com/conference/sessions.page?navtab=tab2">http://www.sibos.com/conference/sessions.page?navtab=tab2</a></p>
-                            <p class="hide">How is the role of an IT leader
-                                changing to meet the challenges of delivering
-                                operational excellence in a world of ever-growing
-                                demands and relentless volatility? What is the impact
-                                of cultural, technology, and generation shifts? What
-                                skills and leadership styles do brave new leaders need
-                                to embrace and how is that different from the
-                                past?</p></td>
+                                practices? </p></td>
+                    </tr>
+                    <tr>
+                        <td colspan="5"><p><strong>You&rsquo;ll find more information about these
+                                    sessions – including the full Sibos conference program
+                                    – at <a href="http://www.sibos.com/conference/sessions.page?navtab=tab2">sibos.com</a>. </strong></p>
                     </tr>
                     <tr>
                         <td width="33%">
