--- a/pages/events.html
+++ b/pages/events.html
@@ -26,20 +26,20 @@
                     <img src="../images/header/stagecoach.png" alt="Together we’ll go far" width="227" height="64" align="right">
                 </div>
                 <div class="navb">
-                    <!--  -->
-                    <a href="home.html">Home</a>
-                    <!--  -->
-                    <a href="about.html">About Wells Fargo</a>
-                    <!--  -->
-                    <a href="events.html">Sibos Events</a>
-                    <!--  -->
-                    <a href="booth.html">Wells Fargo Booth</a>
-                    <!--  -->
-                    <a href="speakers.html">Sibos Speakers</a>
-                    <!--  -->
-                    <a href="explore.html">Explore Dubai</a>
-                    <!--  -->
-                    <a href="giving.html">Charitable giving</a>
+                    <!--  --> 
+                    <a href="home.html">Home</a> 
+                    <!--  --> 
+                    <a href="about.html">About Wells Fargo</a> 
+                    <!--  --> 
+                    <a href="events.html">Sibos Events</a> 
+                    <!--  --> 
+                    <a href="booth.html">Wells Fargo Booth</a> 
+                    <!--  --> 
+                    <a href="speakers.html">Sibos Speakers</a> 
+                    <!--  --> 
+                    <a href="explore.html">Explore Dubai</a> 
+                    <!--  --> 
+                    <a href="giving.html">Charitable giving</a> 
                     <!--  -->
                 </div>
             </header>
@@ -67,54 +67,32 @@
                     <td>&nbsp;</td>
                 </tr>
                 <tr>
-                    <td class="blocks"><p><strong>Sunday, October 28</strong><br>
-                            5:00 p.m. – 8:00 p.m. <br>
-                            <a
-                                    href="../email/727872/index.html">Annual Sibos
-                                Celebration</a><br>
-                            Taiko-en<br>
-                            Space is limited, <a
-                                    href="../email/727872/index.html">RSVP here</a>.</p>
-                        <p><strong>Tuesday, October 30</strong><br>
-                            <em>Transparency: The new paradigm impacting Global
-                            Transaction Banking</em><br>
-                            3:00 p.m. – 4:00 pm<br>
-                            Katsura Room L5<br>
-                            Hyatt Regency Hotel<br>
-                            Space is
-                            limited, <a href="../email/734818/index.html"> RSVP
-                                here</a>. <em><br>
-                            Please speak with your relationship
-                            manager about availability.</em></p>
-                        <p><strong>Tuesday, October 30</strong><br>
-                            4:00 p.m. – 5:30 p.m.<br>
-                            <a href="../email/727874/index.html">Booth reception</a><br>
-                            Wells Fargo booth No. F87, Hall 4 </p>
-                    <td>
-                    <td class="blocks"><p><strong>Sunday, September 15 </strong><br>
+                    <td rowspan="2" class="blocks"><p><strong>Sunday, September 15 </strong><br>
                             <strong>4:00 p.m. to 7:00 </strong><strong>p.m.</strong> <br>
-                            Annual Sibos Celebration <br>
+                            <a href="http://www.wellsfargomedia.com/whl/999911/email.html">Annual Sibos Celebration</a><br>
                             Armani Hotel in Burj Khalifa </p>
                         <p><strong>Tuesday, September 17</strong><br>
                             <strong>4:00 p.m. to 5:30 p.m. </strong> <br>
                             Booth Reception (link to HTML invite) <br>
-                            Wells Fargo booth No. F87, Exhibition Hall Zone B (link to WF booth section) </p>
+                            <a href="booth.html">Wells Fargo booth</a> <br>
+                            No. F87, Exhibition Hall Zone B</p>
                         <p><strong>Wednesday, September 18</strong><br>
                             <strong>7:30 a.m. to 8:30
                             a.m.</strong><br>
-                            &ldquo;Rapidly evolving payment and trade corridors&rdquo;
-                            (link to HTML invite) <br>
+                            <a href="http://www.wellsfargomedia.com/whl/998426/email.html">“Rapidly evolving payment and trade corridors&rdquo;</a><br>
                             Space is limited, so please speak to your
                             relationship manager about availability. </p>
-                        <p class="hide">How is the role of an IT leader
-                            changing to meet the challenges of delivering
-                            operational excellence in a world of ever-growing
-                            demands and relentless volatility? What is the
-                            impact of cultural, technology, and generation
-                            shifts? What skills and leadership styles do brave
-                            new leaders need to embrace and how is that
-                            different from the past?</p></td>
-                    <td>&nbsp;</td>
+                    <td rowspan="2">
+                    <td rowspan="2">&nbsp;</td>
+                    <td class="blocks ribron"><h3>Wednesday</h3></td>
+                </tr>
+                <tr>
+                    <td class="blocks"><p><strong>Wednesday, September 18</strong><br>
+                        <strong>7:30 a.m. to 8:30
+                            a.m.</strong><br>
+                        <a href="http://www.wellsfargomedia.com/whl/998426/email.html">“Rapidly evolving payment and trade corridors&rdquo;</a><br>
+                        Space is limited, so please speak to your
+                    relationship manager about availability. </p></td>
                 </tr>
                 <tr>
                     <td width="33%">&nbsp;</td>
@@ -152,20 +130,20 @@
             <!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
             <footer>
                 <div id="sharebar">
-                    <p class="cap">Share this page
-                        <!--  -->
-                        <span id="st_twitter"></span>
-                        <!--  -->
-                        <span id="st_linkedin"></span>
-                        <!--  -->
-                        <span id="st_email"></span>
-                        <!--  -->
-                        <span id="st_facebook"></span>
-                        <!--  -->
-                        <span id="st_googleplus"></span>
-                        <!--  -->
-                        <span id="st_pinterest"></span>
-                        <!--  -->
+                    <p class="cap">Share this page 
+                        <!--  --> 
+                        <span id="st_twitter"></span> 
+                        <!--  --> 
+                        <span id="st_linkedin"></span> 
+                        <!--  --> 
+                        <span id="st_email"></span> 
+                        <!--  --> 
+                        <span id="st_facebook"></span> 
+                        <!--  --> 
+                        <span id="st_googleplus"></span> 
+                        <!--  --> 
+                        <span id="st_pinterest"></span> 
+                        <!--  --> 
                     </p>
                 </div>
                 <p>© 2013 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
