--- a/pages/home.html
+++ b/pages/home.html
@@ -65,12 +65,12 @@
                         <td class="blocks ribron"><a class="learn" href="giving.html">learn more</a>
                             <h3>Get involved</h3></td>
                         <td>&nbsp;</td>
-                        <td colspan="2" rowspan="2" style="position: relative;">
-                            <p><a title="booth_map" class="popup pic" href="../images/misc/booth_map.gif">
+                        <td colspan="2" rowspan="2">
+                            <p><a title="Booth map" class="popup pic" href="../images/misc/booth_map.gif">
                                     <img src="../images/booth_F87.png" width="320" height="128" alt="Booth F87">
                                 </a></p>
-                            <p><a title="booth_map" class="popup pic" href="../images/misc/booth_map.gif">
-                                    <img src="../images/banners/momentum.png" width="320" height="164" alt="Magazine">
+                            <p><a title="Momentum Magazine" href="momentum.pdf">
+                                    <img src="../images/banners/momentum.png" width="320" height="164" alt="Magazine" style="margin-bottom: -2em;">
                                 </a></p>
                         </td>
                     </tr>
@@ -90,12 +90,10 @@
                         <td class="blocks"><p>
                                 <img src="../images/tile_home_getInvolved.png" width="225" height="121">
                             </p>
-                            <p><strong>By working together</strong>, we can make a
-                                    difference in our international communities. </p>
-                            <p>You are invited, for the third year in a row,
-                                to cast a vote for one of four nonprofits that
+                            <p><strong>By working together</strong>, we can make a difference in our international communities. </p>
+                            <p>You are invited, for the third year in a row, to cast a vote for one of four nonprofits that
                                 make a difference around the world. </p></td>
-                        <td style="position: relative;">&nbsp;</td>
+                        <td>&nbsp;</td>
                     </tr>
                     <tr>
                         <td width="33%">&nbsp;</td>
