--- a/pages/speakers.html
+++ b/pages/speakers.html
@@ -52,13 +52,13 @@
                 <table>
                     <tr>
                         <td colspan="4"><h2>Sibos Speakers</h2>
-                            <p>Hear Wells Fargo subject matter experts speak during these Sibos sessions:</p></td>
+                            <p><strong>Hear Wells Fargo subject matter experts speak during these Sibos sessions:</strong></p></td>
                         <td>&nbsp;</td>
                     </tr>
                     <tr>
                         <td class="blocks ribron"><h3>Mobile banking</h3>
                         <td>&nbsp;</td>
-                        <td class="blocks ribron"><h3>&lt;tile ad&gt;</h3></td>
+                        <td>&nbsp;</td>
                         <td>&nbsp;</td>
                         <td class="blocks ribron"><h3>Risk management</h3></td>
                     </tr>
@@ -67,39 +67,34 @@
                                 Tuesday, September 17<br>
                                 4:00 pm to 5:00 pm<br>
                                 Conference room 3 - CR3</p>
-                            <p>
-                                <img src="../images/speakers_kennedy.png" alt="" width="119" height="156" align="right">
-                                Featuring: <br>
-                                Mike Kennedy, head of Innovation and
-                                Payments Strategy</p>
-                            <p>&nbsp;</p>
-                            <p><a href="http://collaboration-iceo.wellsfargo.com/sites/MSC/wbr/PDFBioFinals/KennedyMichaelBio.pdf">bio</a></p>
+                            <p> <strong>Featuring:
+                                    <img src="../images/speakers_kennedy.png" alt="" width="119" height="156" style="float: right; margin-left: 1em;">
+                                    <br>
+                                    Mike Kennedy</strong>, head of Innovation and
+                                Payments Strategy [<a href="http://collaboration-iceo.wellsfargo.com/sites/MSC/wbr/PDFBioFinals/KennedyMichaelBio.pdf">bio</a>]</p>
                             <p> How to generate value and develop an
                                 infrastructure that supports the strategic use of
                                 gamification and social media to improve the customer
                                 experience. </p>
                         <td>&nbsp;</td>
-                        <td class="blocks"><p><strong>&lt;placeholder for tile ad&gt;</strong><br>
+                        <td><p><strong>&lt;placeholder for tile ad&gt;</strong><br>
                                  Share your pony story with us <br>
                                 #WFpony</p>
                             <p>
                                 <img src="../images/banners/pony.png" width="230" height="61" alt="pony">
                                 <img src="../images/speakers_videoThumbnail.png" alt="" width="98" height="58">
-                            </p>
-                        </td>
+                            </p></td>
                         <td>&nbsp;</td>
                         <td class="blocks"><p> <strong>From grapple to grip</strong><br>
                                 Wednesday, September 18<br>
                                 2:00 pm to 3:00 pm<br>
                                 Conference room 1 - CR1 </p>
-                            <p>
-                                <img src="../images/speakers_lickiss.png" alt="" width="119" height="156" align="right">
-                                Featuring: <br>
-                                Tom Lickiss, head of Business Risk for
-                                GFI </p>
-                            <p>&nbsp;</p>
-                            <p><a href="http://collaboration-iceo.wellsfargo.com/sites/MSC/wbr/PDFBioFinals/lickissthomasbio.pdf">bio</a><br>
-                                Banks are exposed to a wide and
+                            <p> <strong>Featuring:
+                                    <img src="../images/speakers_lickiss.png" alt="" width="119" height="156" style="float: right; margin-left: 1em;">
+                                    <br>
+                                    Tom Lickiss</strong>, head of Business Risk for
+                                GFI [<a href="http://collaboration-iceo.wellsfargo.com/sites/MSC/wbr/PDFBioFinals/lickissthomasbio.pdf">bio</a>]</p>
+                            <p>                            Banks are exposed to a wide and
                                 increasing range of risks that can have an impact
                                 on their reputation. The panel will discuss how
                                 banks apply a risk-based approach to measure and
@@ -110,19 +105,23 @@
                                 practices? </p></td>
                     </tr>
                     <tr>
+                        <td colspan="5">&nbsp;</td>
+                    </tr>
+                    <tr>
                         <td colspan="5"><p><strong>You&rsquo;ll find more information about these
                                     sessions – including the full Sibos conference program
                                     – at <a href="http://www.sibos.com/conference/sessions.page?navtab=tab2">sibos.com</a>. </strong></p>
                     </tr>
                     <tr>
-                        <td width="33%">
+                        <td width="30%">
                         <td width="1%">&nbsp;</td>
                         <td width="33%">&nbsp;</td>
                         <td width="1%">&nbsp;</td>
-                        <td width="33%">&nbsp;</td>
+                        <td width="36%">&nbsp;</td>
                     </tr>
                 </table>
-                <p class="shrink">*You may need Adobe Reader to read PDF files. <a href="http://get.adobe.com/reader">Download</a> Adobe Reader for free.</p>
+                <p class="shrink">*You may need a reader to view PDF files. <a
+                        href="https://www.google.com/search?q=free+pdf+viewer">Download</a> one for free.</p>
                 <div class="popup">
                     <img id="booth_map" src="../images/misc/booth_map.gif" width="1000" tabindex="-1">
                     <br>
