--- a/pages/about.html
+++ b/pages/about.html
@@ -70,7 +70,7 @@
                     </tr>
                     <tr>
                         <td width="2%">&nbsp;</td>
-                        <td width="30%" valign="top" class="blocks"><p>Learn more about Wells Fargo </p>
+                        <td width="30%" valign="top" class="blocks"><p><strong>Learn more about Wells Fargo</strong></p>
                             <ul>
                                 <li><a href="https://www.wellsfargo.com/downloads/pdf/about/wellsfargotoday.pdf">Wells Fargo Today</a></li>
                                 <li><a href="https://www.wellsfargo.com/downloads/pdf/about/csr/reports/2013-social-responsibility-interim.pdf">Social Responsibility report</a></li>
