--- a/pages/events.html
+++ b/pages/events.html
@@ -26,20 +26,20 @@
                     <img src="../images/header/stagecoach.png" alt="Together we’ll go far" width="227" height="64" align="right">
                 </div>
                 <div class="navb">
-                    <!--  --> 
-                    <a href="home.html">Home</a> 
-                    <!--  --> 
-                    <a href="about.html">About Wells Fargo</a> 
-                    <!--  --> 
-                    <a href="events.html">Sibos Events</a> 
-                    <!--  --> 
-                    <a href="booth.html">Wells Fargo Booth</a> 
-                    <!--  --> 
-                    <a href="speakers.html">Sibos Speakers</a> 
-                    <!--  --> 
-                    <a href="explore.html">Explore Dubai</a> 
-                    <!--  --> 
-                    <a href="giving.html">Charitable giving</a> 
+                    <!--  -->
+                    <a href="home.html">Home</a>
+                    <!--  -->
+                    <a href="about.html">About Wells Fargo</a>
+                    <!--  -->
+                    <a href="events.html">Sibos Events</a>
+                    <!--  -->
+                    <a href="booth.html">Wells Fargo Booth</a>
+                    <!--  -->
+                    <a href="speakers.html">Sibos Speakers</a>
+                    <!--  -->
+                    <a href="explore.html">Explore Dubai</a>
+                    <!--  -->
+                    <a href="giving.html">Charitable giving</a>
                     <!--  -->
                 </div>
             </header>
@@ -50,58 +50,62 @@
                     <img class="banner" src="../images/header/reins.png" alt="">
                 </section>
                 <table>
-                <tr>
-                    <td colspan="3"><h2>Sibos Events</h2>
-                        <p>Renew friendships and create new ones.
-                            We&rsquo;re proud to be hosting our annual Sibos
-                            Celebration reception at Dubai&rsquo;s most
-                            prestigious landmark – Burj Khalifa – the tallest
-                            structure in the world. In addition, we&rsquo;ll
-                            be hosting a welcome reception at the Wells Fargo
-                            Sibos booth and a breakfast seminar on
-                            &ldquo;Rapidly evolving payment and trade
-                            corridors.&rdquo; Please contact your Wells Fargo
-                            GFI relationship manager for more details about
-                            any of these events. We hope you can join us at
-                            one of these events. </p></td>
-                    <td>&nbsp;</td>
-                </tr>
-                <tr>
-                    <td rowspan="2" class="blocks"><p><strong>Sunday, September 15 </strong><br>
-                            <strong>4:00 p.m. to 7:00 </strong><strong>p.m.</strong> <br>
-                            <a href="http://www.wellsfargomedia.com/whl/999911/email.html">Annual Sibos Celebration</a><br>
-                            Armani Hotel in Burj Khalifa </p>
-                        <p><strong>Tuesday, September 17</strong><br>
-                            <strong>4:00 p.m. to 5:30 p.m. </strong> <br>
-                            Booth Reception (link to HTML invite) <br>
-                            <a href="booth.html">Wells Fargo booth</a> <br>
-                            No. F87, Exhibition Hall Zone B</p>
-                        <p><strong>Wednesday, September 18</strong><br>
-                            <strong>7:30 a.m. to 8:30
-                            a.m.</strong><br>
-                            <a href="http://www.wellsfargomedia.com/whl/998426/email.html">“Rapidly evolving payment and trade corridors&rdquo;</a><br>
-                            Space is limited, so please speak to your
-                            relationship manager about availability. </p>
-                    <td rowspan="2">
-                    <td rowspan="2">&nbsp;</td>
-                    <td class="blocks ribron"><h3>Wednesday</h3></td>
-                </tr>
-                <tr>
-                    <td class="blocks"><p><strong>Wednesday, September 18</strong><br>
-                        <strong>7:30 a.m. to 8:30
-                            a.m.</strong><br>
-                        <a href="http://www.wellsfargomedia.com/whl/998426/email.html">“Rapidly evolving payment and trade corridors&rdquo;</a><br>
-                        Space is limited, so please speak to your
-                    relationship manager about availability. </p></td>
-                </tr>
-                <tr>
-                    <td width="33%">&nbsp;</td>
-                    <td width="3%">&nbsp;</td>
-                    <td width="33%">&nbsp;</td>
-                    <td width="33%">&nbsp;</td>
-                </tr>
+                    <tr>
+                        <td colspan="5"><h2>Sibos Events</h2>
+                            <p>Renew friendships and create new ones.
+                                We&rsquo;re proud to be hosting our annual Sibos
+                                Celebration reception at Dubai&rsquo;s most
+                                prestigious landmark – Burj Khalifa – the tallest
+                                structure in the world. In addition, we&rsquo;ll
+                                be hosting a welcome reception at the Wells Fargo
+                                Sibos booth and a breakfast seminar on
+                                &ldquo;Rapidly evolving payment and trade
+                                corridors.&rdquo;</p></td>
+                    </tr>
+                    <tr>
+                        <td class="blocks ribron"><h3>Annual  Celebration</h3></td>
+                        <td>
+                        <td class="blocks ribron"><h3>Booth Reception</h3></td>
+                        <td>
+                        <td class="blocks ribron"><h3>Speaker Series</h3></td>
+                    </tr>
+                    <tr>
+                        <td class="blocks"><p><strong>Sunday, September 15 </strong><br>
+                                <strong>4:00 p.m. to 7:00 </strong><strong>p.m.</strong> <br>
+                                <a href="http://www.wellsfargomedia.com/whl/999911/email.html">Annual Sibos Celebration</a><br>
+                                Armani Hotel in Burj Khalifa </p>
+                        <td>
+                        <td class="blocks"><p><strong>Tuesday, September 17</strong><br>
+                                <strong>4:00 p.m. to 5:30 p.m. </strong> <br>
+                                Booth Reception (link to HTML invite) <br>
+                                <a href="booth.html">Wells Fargo booth</a> <br>
+                                No. F87, Exhibition Hall Zone B </p></td>
+                        <td>
+                        <td class="blocks"><p><strong>Wednesday, September 18</strong><br>
+                                <strong>7:30 a.m. to 8:30
+                                    a.m.</strong><br>
+                                <a href="http://www.wellsfargomedia.com/whl/998426/email.html">“Wells Fargo Sibos Executive Speaker Series: Rapidly Evolving Payment and Trade Corridors&rdquo;</a><br>
+                                Space is limited, so please speak to your
+                                relationship manager about availability. </p></td>
+                    </tr>
+                    <tr>
+                        <td colspan="5">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <td colspan="5"><p>Please contact your Wells Fargo
+                                GFI relationship manager for more details about
+                                any of these events. </p>
+                            <p><strong>We hope you can join us at
+                                    one of these events.</strong></p></td>
+                    </tr>
+                    <tr>
+                        <td width="33%">&nbsp;</td>
+                        <td width="1%">&nbsp;</td>
+                        <td width="33%">&nbsp;</td>
+                        <td width="1%">&nbsp;</td>
+                        <td width="33%">&nbsp;</td>
+                    </tr>
                 </table>
-                <p class="shrink">*You may need Adobe Reader to read PDF files. <a href="http://get.adobe.com/reader">Download</a> Adobe Reader for free.</p>
                 <div class="popup">
                     <img id="booth_map" src="../images/misc/booth_map.gif" width="1000" tabindex="-1">
                     <br>
@@ -130,20 +134,20 @@
             <!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
             <footer>
                 <div id="sharebar">
-                    <p class="cap">Share this page 
-                        <!--  --> 
-                        <span id="st_twitter"></span> 
-                        <!--  --> 
-                        <span id="st_linkedin"></span> 
-                        <!--  --> 
-                        <span id="st_email"></span> 
-                        <!--  --> 
-                        <span id="st_facebook"></span> 
-                        <!--  --> 
-                        <span id="st_googleplus"></span> 
-                        <!--  --> 
-                        <span id="st_pinterest"></span> 
-                        <!--  --> 
+                    <p class="cap">Share this page
+                        <!--  -->
+                        <span id="st_twitter"></span>
+                        <!--  -->
+                        <span id="st_linkedin"></span>
+                        <!--  -->
+                        <span id="st_email"></span>
+                        <!--  -->
+                        <span id="st_facebook"></span>
+                        <!--  -->
+                        <span id="st_googleplus"></span>
+                        <!--  -->
+                        <span id="st_pinterest"></span>
+                        <!--  -->
                     </p>
                 </div>
                 <p>© 2013 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
