--- a/pages/booth.html
+++ b/pages/booth.html
@@ -46,7 +46,7 @@
             <!-- #EndLibraryItem -->
             <div id="feature">
                 <section id="Banner">
-                    <img class="" src="../images/banners/home.png" alt="">
+                    <img class="" src="../images/banners/boothPage.jpg" alt="">
                     <img class="banner1" src="../images/header/reins.png" alt="">
                 </section>
                 <table>
