--- a/pages/explore.html
+++ b/pages/explore.html
@@ -99,7 +99,7 @@
                                     The Official Tourism Portal <br>
                                     Of The City Of Dubai</li>
                                 <li><a href="http://www.tripadvisor.com/Tourism-g295424-Dubai_Emirate_of_Dubai-Vacations.html">Trip Advisor</a></li>
-                                <li><a href="links to http://wikitravel.org/en/Dubai">Wikitravel guide to Dubai</a></li>
+                                <li><a href="http://wikitravel.org/en/Dubai">Wikitravel guide to Dubai</a></li>
                             </ul></td>
                     </tr>
                     <tr>
