--- a/pages/giving.html
+++ b/pages/giving.html
@@ -162,7 +162,7 @@
                             <p><strong>— Dalene Byrnes</strong>, GFI DIFC Branch </p>
                             <hr>
                             <p>
-                                <img src="#" alt="projectvietnam.org" width="201" height="103" align="right">
+                                <img src="../images/logos/pvf.png" alt="projectvietnam.org" width="267" height="124" align="right">
                                 <a href="http://www.projectvietnam.org">Project Vietnam Foundation</a> works on
                                 creating sustainable pediatric healthcare in Vietnam, while providing free healthcare and aid to
                                 impoverished rural areas across the country. (Human Services) </p>
