--- a/pages/events.html
+++ b/pages/events.html
@@ -84,17 +84,14 @@
                         <td class="blocks"><p><strong>Wednesday, September 18</strong><br>
                                 <strong>7:30 a.m. to 8:30
                                     a.m.</strong><br>
-                                <a href="http://www.wellsfargomedia.com/whl/998426/email.html">“Wells Fargo Sibos Executive Speaker Series: Rapidly Evolving Payment and Trade Corridors&rdquo;</a><br>
-                                Space is limited, so please speak to your
-                                relationship manager about availability. </p></td>
+                                <a href="http://www.wellsfargomedia.com/whl/998426/email.html">“Wells Fargo Sibos Executive Speaker Series: Rapidly Evolving Payment and Trade Corridors&rdquo;</a></p></td>
                     </tr>
                     <tr>
                         <td colspan="5">&nbsp;</td>
                     </tr>
                     <tr>
                         <td colspan="5"><p>Please contact your Wells Fargo
-                                GFI relationship manager for more details about
-                                any of these events. </p>
+                                GFI relationship manager for more details.</p>
                             <p><strong>We hope you can join us at
                                     one of these events.</strong></p></td>
                     </tr>
@@ -154,5 +151,6 @@
             </footer>
             <!-- #EndLibraryItem -->
         </div>
+        <blockquote>&nbsp;</blockquote>
     </body>
 </html>
