--- a/pages/speakers.html
+++ b/pages/speakers.html
@@ -26,20 +26,20 @@
                     <img src="../images/header/stagecoach.png" alt="Together we’ll go far" width="227" height="64" align="right">
                 </div>
                 <div class="navb">
-                    <!--  -->
-                    <a href="home.html">Home</a>
-                    <!--  -->
-                    <a href="about.html">About Wells Fargo</a>
-                    <!--  -->
-                    <a href="events.html">Sibos Events</a>
-                    <!--  -->
-                    <a href="booth.html">Wells Fargo Booth</a>
-                    <!--  -->
-                    <a href="speakers.html">Sibos Speakers</a>
-                    <!--  -->
-                    <a href="explore.html">Explore Dubai</a>
-                    <!--  -->
-                    <a href="giving.html">Charitable giving</a>
+                    <!--  --> 
+                    <a href="home.html">Home</a> 
+                    <!--  --> 
+                    <a href="about.html">About Wells Fargo</a> 
+                    <!--  --> 
+                    <a href="events.html">Sibos Events</a> 
+                    <!--  --> 
+                    <a href="booth.html">Wells Fargo Booth</a> 
+                    <!--  --> 
+                    <a href="speakers.html">Sibos Speakers</a> 
+                    <!--  --> 
+                    <a href="explore.html">Explore Dubai</a> 
+                    <!--  --> 
+                    <a href="giving.html">Charitable giving</a> 
                     <!--  -->
                 </div>
             </header>
@@ -50,75 +50,57 @@
                     <img class="banner1" src="../images/header/reins.png" alt="">
                 </section>
                 <table>
-                    <tr>
-                        <td colspan="4"><h2>Sibos Speakers</h2>
-                            <p><strong>Hear Wells Fargo subject matter experts speak during these Sibos sessions:</strong></p></td>
-                        <td>&nbsp;</td>
-                    </tr>
-                    <tr>
-                        <td class="blocks ribron"><h3>Mobile banking</h3>
-                        <td>&nbsp;</td>
-                        <td>&nbsp;</td>
-                        <td>&nbsp;</td>
-                        <td class="blocks ribron"><h3>Risk management</h3></td>
-                    </tr>
-                    <tr>
-                        <td class="blocks"><p> <strong>New technologies that improve the customer experience</strong><br>
-                                Tuesday, September 17<br>
-                                4:00 pm to 5:00 pm<br>
-                                Conference room 3 - CR3</p>
-                            <p> <strong>Featuring:
-                                    <img src="../images/speakers_kennedy.png" alt="" width="119" height="156" style="float: right; margin-left: 1em;">
-                                    <br>
-                                    Mike Kennedy</strong>, head of Innovation and
-                                Payments Strategy [<a href="http://collaboration-iceo.wellsfargo.com/sites/MSC/wbr/PDFBioFinals/KennedyMichaelBio.pdf">bio</a>]</p>
-                            <p> How to generate value and develop an
-                                infrastructure that supports the strategic use of
-                                gamification and social media to improve the customer
-                                experience. </p>
-                        <td>&nbsp;</td>
-                        <td><p><strong>&lt;placeholder for tile ad&gt;</strong><br>
-                                 Share your pony story with us <br>
-                                #WFpony</p>
-                            <p>
-                                <img src="../images/banners/pony.png" width="230" height="61" alt="pony">
-                                <img src="../images/speakers_videoThumbnail.png" alt="" width="98" height="58">
-                            </p></td>
-                        <td>&nbsp;</td>
-                        <td class="blocks"><p> <strong>From grapple to grip</strong><br>
-                                Wednesday, September 18<br>
-                                2:00 pm to 3:00 pm<br>
-                                Conference room 1 - CR1 </p>
-                            <p> <strong>Featuring:
-                                    <img src="../images/speakers_lickiss.png" alt="" width="119" height="156" style="float: right; margin-left: 1em;">
-                                    <br>
-                                    Tom Lickiss</strong>, head of Business Risk for
-                                GFI [<a href="http://collaboration-iceo.wellsfargo.com/sites/MSC/wbr/PDFBioFinals/lickissthomasbio.pdf">bio</a>]</p>
-                            <p>                            Banks are exposed to a wide and
-                                increasing range of risks that can have an impact
-                                on their reputation. The panel will discuss how
-                                banks apply a risk-based approach to measure and
-                                mitigate their liabilities. How do they move from
-                                understanding risk to applying controls in line
-                                with their risk appetite? How can they benchmark
-                                their policies and procedures with global best
-                                practices? </p></td>
-                    </tr>
-                    <tr>
-                        <td colspan="5">&nbsp;</td>
-                    </tr>
-                    <tr>
-                        <td colspan="5"><p><strong>You&rsquo;ll find more information about these
-                                    sessions – including the full Sibos conference program
-                                    – at <a href="http://www.sibos.com/conference/sessions.page?navtab=tab2">sibos.com</a>. </strong></p>
-                    </tr>
-                    <tr>
-                        <td width="30%">
-                        <td width="1%">&nbsp;</td>
-                        <td width="33%">&nbsp;</td>
-                        <td width="1%">&nbsp;</td>
-                        <td width="36%">&nbsp;</td>
-                    </tr>
+                <tr>
+                    <td colspan="3"><h2>Sibos Speakers</h2>
+                        <p><strong>Hear Wells Fargo subject matter experts speak during these Sibos sessions:</strong></p></td>
+                </tr>
+                <tr>
+                    <td class="blocks ribron"><h3>Mobile banking</h3>
+                    <td>&nbsp;</td>
+                    <td class="blocks ribron"><h3>Risk management</h3></td>
+                </tr>
+                <tr>
+                    <td class="blocks"><p> <strong>New technologies that improve the customer experience</strong><br>
+                            Tuesday, September 17<br>
+                            4:00 pm to 5:00 pm<br>
+                            Conference room 3 - CR3</p>
+                        <p> <strong>Featuring:
+                            <img src="../images/speakers_kennedy.png" alt="" width="119" height="156" style="float: right; margin-left: 1em;">
+                            <br>
+                            Mike Kennedy</strong>, head of Innovation and
+                            Payments Strategy [<a href="http://collaboration-iceo.wellsfargo.com/sites/MSC/wbr/PDFBioFinals/KennedyMichaelBio.pdf">bio</a>]</p>
+                        <p> How to generate value and develop an
+                            infrastructure that supports the strategic use of
+                            gamification and social media to improve the customer
+                            experience. </p>
+                    <td>&nbsp;</td>
+                    <td class="blocks"><p> <strong>From grapple to grip</strong><br>
+                            Wednesday, September 18<br>
+                            2:00 pm to 3:00 pm<br>
+                            Conference room 1 - CR1 </p>
+                        <p> <strong>Featuring:
+                            <img src="../images/speakers_lickiss.png" alt="" width="119" height="156" style="float: right; margin-left: 1em;">
+                            <br>
+                            Tom Lickiss</strong>, head of Business Risk for
+                            GFI [<a href="http://collaboration-iceo.wellsfargo.com/sites/MSC/wbr/PDFBioFinals/lickissthomasbio.pdf">bio</a>]</p>
+                        <p> Banks are exposed to a wide and increasing range of risks that can have an impact on their reputation. 
+                            The panel will discuss how banks apply a risk-based approach to measure and mitigate their liabilities. 
+                            How do they move from understanding risk to applying controls in line with their risk appetite? 
+                            How can they benchmark their policies and procedures with global best practices? </p></td>
+                </tr>
+                <tr>
+                    <td colspan="3">&nbsp;</td>
+                </tr>
+                <tr>
+                    <td colspan="3"><p><strong>You&rsquo;ll find more information about these
+                            sessions – including the full Sibos conference program
+                            – at <a href="http://www.sibos.com/conference/sessions.page?navtab=tab2">sibos.com</a>. </strong></p>
+                </tr>
+                <tr>
+                    <td width="50%">
+                    <td width="1%">&nbsp;</td>
+                    <td width="50%">&nbsp;</td>
+                </tr>
                 </table>
                 <p class="shrink">*You may need a reader to view PDF files. <a
                         href="https://www.google.com/search?q=free+pdf+viewer">Download</a> one for free.</p>
@@ -150,20 +132,20 @@
             <!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
             <footer>
                 <div id="sharebar">
-                    <p class="cap">Share this page
-                        <!--  -->
-                        <span id="st_twitter"></span>
-                        <!--  -->
-                        <span id="st_linkedin"></span>
-                        <!--  -->
-                        <span id="st_email"></span>
-                        <!--  -->
-                        <span id="st_facebook"></span>
-                        <!--  -->
-                        <span id="st_googleplus"></span>
-                        <!--  -->
-                        <span id="st_pinterest"></span>
-                        <!--  -->
+                    <p class="cap">Share this page 
+                        <!--  --> 
+                        <span id="st_twitter"></span> 
+                        <!--  --> 
+                        <span id="st_linkedin"></span> 
+                        <!--  --> 
+                        <span id="st_email"></span> 
+                        <!--  --> 
+                        <span id="st_facebook"></span> 
+                        <!--  --> 
+                        <span id="st_googleplus"></span> 
+                        <!--  --> 
+                        <span id="st_pinterest"></span> 
+                        <!--  --> 
                     </p>
                 </div>
                 <p>© 2013 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
