--- a/pages/booth2.html
+++ b/pages/booth2.html
@@ -46,7 +46,7 @@
             <!-- #EndLibraryItem -->
             <div id="feature">
                 <section id="Banner">
-                    <img class="" src="../images/banners/boothPage.jpg" alt="">
+                    <img class="" src="../images/banners/boothPage.png" alt="">
                     <img class="banner1" src="../images/header/reins.png" alt="">
                 </section>
                 <table>
@@ -66,7 +66,10 @@
                     <p><strong>Connect.</strong> Our senior leadership and relationship managers look
                         forward to connecting with you in our booth. </p>
                     <p><a title="booth_map" class="popup pic"
-                          href="../images/misc/booth_map.pdf">View exhibition floor map</a> </p></td>
+                          href="../images/misc/booth_map.pdf">View exhibition floor map</a> | <a
+                          title="rendered_booth" class="popup pic"
+                          href="../images/misc/rendered_booth.jpg">View Wells Fargo booth
+                            rendering</a></p></td>
                     <td>&nbsp;</td>
                     <td><p>
                             <img src="../images/tile_booth_giveaway.png" width="320" height="254" alt="Check in to our booth via Foursquare or your LinkedIn account and receive a 3 in 1 phone charger while supplies last. You can also tweet about us via Twitter to receive your free gift.">
@@ -89,6 +92,20 @@
                     <img id="rendered_booth" src="../images/booth_rendered.jpg" tabindex="-1">
                     <br>
                     CLICK OUTSIDE IMAGE TO CLOSE
+                </div>
+                <div class="popup">
+                    <video id="george_vid" class="video-js vjs-default-skin" controls preload="" width="853" height="480" poster="">
+                        <source src="../media/George_Doolittle-SIBOS_promo.mp4" type='video/mp4'>
+                    </video>
+                    <br>
+                    CLICK OUTSIDE VIDEO TO CLOSE
+                </div>
+                <div class="popup">
+                    <video id="steve_vid" class="video-js vjs-default-skin" controls preload="" width="853" height="480" poster="">
+                        <source src="../media/Steve_Ellis-SIBOS_promo.mp4" type='video/mp4'>
+                    </video>
+                    <br>
+                    CLICK OUTSIDE VIDEO TO CLOSE
                 </div>
             </div>
             <!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
