--- a/pages/booth.html
+++ b/pages/booth.html
@@ -57,8 +57,8 @@
                     </tr>
                     <tr>
                         <td><p>As a repeat exhibitor, Wells Fargo is excited to bring you a booth
-                                experience like no other. We look forward to seeing you at booth <u>No.
-                        F87</u>.</p>
+                                experience like no other. We look forward to seeing you at
+                            <strong>booth No. F87</strong>.</p>
                     <p><strong>Learn. </strong>Stop by to take your picture in front of the
                         Buffalo Bill stagecoach and learn more about the history of Wells Fargo.</p>
                     <p><strong>Explore. </strong>Experience all the exciting new enhancements
