--- a/pages/explore.html
+++ b/pages/explore.html
@@ -64,7 +64,7 @@
                         <td>&nbsp;</td>
                     </tr>
                     <tr>
-                        <td rowspan="2"><ul>
+                        <td rowspan="3"><ul>
                                 <li><a
                                         href="http://www.tripadvisor.com/Attraction_Review-g295424-d676922-Reviews-Burj_Khalifa-Dubai_Emirate_of_Dubai.html">Burj
                                         Khalifa</a> the world&rsquo;s tallest building, features a
@@ -90,7 +90,7 @@
                                     world, is home to more than 33,000 animals and sea creatures you can examine
                                     from inside its acrylic walk-through tunnel.</li>
                             </ul></td>
-                        <td rowspan="2">&nbsp;</td>
+                        <td rowspan="3">&nbsp;</td>
                         <td class="blocks ribron"><h3>Resources</h3></td>
                     </tr>
                     <tr>
@@ -102,6 +102,9 @@
                                 <li><a href="http://wikitravel.org/en/Dubai">Wikitravel guide to Dubai</a></li>
                             </ul></td>
                     </tr>
+                    <tr>
+                        <td>&nbsp;</td>
+                </tr>
                     <tr>
                         <td width="66%">&nbsp;</td>
                         <td width="4%">&nbsp;</td>
