--- a/pages/home.html
+++ b/pages/home.html
@@ -50,7 +50,7 @@
                     <img class="fade" src="../images/banners/exploreDubai.png" alt="">
                     <img class="fade" src="../images/banners/giveaway_orange.png" alt="">
                     <img class="fade" src="../images/banners/pony.png" alt="">
-                    <img class="fade" src="../images/banners/home.png" alt="">
+                    <img class="fade click2run" src="../images/banners/home.png" alt="">
                     <img class="banner1" src="../images/header/reins.png" alt="">
                 </section>
                 <table>
@@ -73,7 +73,7 @@
                             <p><a title="Booth map" href="booth.html">
                                     <img src="../images/booth_F87.png" width="320" height="128" alt="Booth F87">
                                 </a></p>
-                            <p><a title="Momentum Magazine" href="momentum.pdf">
+                            <p><a title="Momentum Magazine" href="../media/momentum.pdf">
                                     <img src="../images/banners/momentum.png" width="320" height="164" alt="Magazine" style="margin-bottom: -2em;">
                                 </a></p>
                         </td>
